# candidata

./: pyproject.toml  readme.MD
data/: 800_jobs__clean_no_hebrew.csv  Risks.csv  holdout.csv  holdout_ethical.csv
graphs/: bar_plots.py
scripts/: bow-reut.py  bow.py  dtm.py  full_solution.py  sentinment_analysis_lexicon.py  split_sentences.py  test_solution_topic.py  word2vec.py  word2vec_classifier.py
