[tool.poetry]
name = "candidata"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.2.0"
mypy = "^0.991"
black = "^22.12.0"
pylint = "^2.15.10"
nltk = "^3.8.1"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
