[tool.poetry]
name = "candidata"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.2.0"
mypy = "^0.991"
black = "^22.12.0"
pylint = "^2.15.10"
nltk = "^3.8.1"
pandas = "^1.5.3"
transformers = "^4.25.1"
gensim = "^4.3.0"
torch = "^1.13.1"
torchvision = "^0.14.1+cu116"
torchaudio = "^0.13.1+cu116"
sentence-transformers = "^2.2.2"
pillow = "^9.4.0"
image = "^1.5.33"
textblob = "^0.17.1"
afinn = "^0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
